popup/popup.css
body {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;

  height : 600px;
  width: 600px;
  
  margin: 0px;
  padding: 5px;
  border: 2px solid black;
  border-right: 2px solid black;
  border-bottom: 2px solid black;
  border-left: 2px solid black;

  background-color: black;
}

.command_groups {
  display: flex;
  align-items: flex-end;
  height: 50px;
  width: auto;
  
  border-radius: 5px;
  border-bottom: 5px solid black;
  border-left:   5px solid black;

  margin-bottom: 5px;
}

.popup_button {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;

  height: 45px;
  width: 100px;
  outline: none;
  
  /* padding: 1px; */
  padding-top: 1px;
  padding-right: 1px;
  padding-bottom: 1px;
  padding-left: 1px;
  
  margin-right: 5px;
  
  background-color: rgb(163, 161, 161);
  border-radius: 5px 5px 0px 0px;
}

.popup_button.button_hover_grey {
  border-top: 5px solid rgb(220, 220, 220);
  border-right: 5px solid rgb(220, 220, 220);
  border-bottom: 5px solid black;
  border-left: 5px solid rgb(220, 220, 220);
  margin-bottom: -5px;
  margin-left: -5px;
  margin-right: 0px;
}
.popup_button.button_hover_blue {
  border-top: 5px solid rgb(146, 182, 242);
  border-right: 5px solid rgb(146, 182, 242);
  border-bottom: 5px solid black;
  border-left: 5px solid rgb(146, 182, 242);
  margin-bottom: -5px;
  margin-left: -5px;
  margin-right: 0px;
}

.popup_button.button_hover_red {
  border-top: 5px solid rgb(228, 144, 134);
  border-right: 5px solid rgb(228, 144, 134);
  border-bottom: 5px solid black;
  border-left: 5px solid rgb(228, 144, 134);
  margin-bottom: -5px;
  margin-left: -5px;
  margin-right: 0px;
}

.popup_button.button_hover{
  border-top: 5px solid;
  border-right: 5px solid;
  border-bottom: 5px solid black;
  border-left: 5px solid;
  margin-bottom: -5px;
  margin-left: -5px;
  margin-right: 0px;
}

.popup_button.button_hover_yellow {
  border-top: 5px solid rgb(248, 213, 117);
  border-right: 5px solid rgb(248, 213, 117);
  border-bottom: 5px solid black;
  border-left: 5px solid rgb(248, 213, 117);
  margin-bottom: -5px;
  margin-left: -5px;
  margin-right: 0px;
}

.popup_label {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;

  height: inherit;
  width: 100px;
  outline: none;
  
  margin-right: 5px;
  
  border-right: 1px solid black;
  border-top-left-radius: 0px;
  border-top-right-radius: 5px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;

  font-size: 16px;
}

.background_grey {background-color: rgb(220, 220, 220);}
.background_blue {background-color:rgb(146, 182, 242);}
.background_red {background-color:rgb(228, 144, 134);}
.background_yellow {background-color:rgb(248, 213, 117);}

.border_grey {border-color: rgb(220, 220, 220);}
.border_blue {border-color:rgb(146, 182, 242);}
.border_red {border-color:rgb(228, 144, 134);}
.border_yellow {border-color:rgb(248, 213, 117);}

